<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    android:layout_margin="@dimen/dimen_10dp"
    android:elevation="@dimen/dimen_4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/imgProduct"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_150dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

        <Button
            android:id="@+id/btnBuy"
            android:layout_width="@dimen/dimen_120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/imgProduct"
            android:layout_margin="@dimen/dimen_10dp"
            android:gravity="center"
            android:background="@drawable/login_bg"
            android:text="@string/buy"
            android:textColor="@color/white"
            ></Button>
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txtProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/btnBuy"
            android:layout_below="@+id/imgProduct"
            android:layout_margin="@dimen/dimen_10dp"
            android:text="@string/name"
            android:textSize="@dimen/dimen_18dp"
            android:textColor="@color/black"
            />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txtProductDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/btnBuy"
            android:layout_below="@+id/txtProductName"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:text="@string/desc"
            android:textSize="@dimen/dimen_18dp"
            android:textColor="@color/black"
            />
    </RelativeLayout>
</android.support.v7.widget.CardView>
